[gd_scene load_steps=2 format=3 uid="uid://4kso42q6se5f"]

[ext_resource type="Script" path="res://project/scripts/lobby_menu.gd" id="1_an62n"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an62n")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -393.0
offset_top = 128.0
offset_right = 393.0
offset_bottom = 336.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "this is the lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Client" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaitingLabel" type="Label" parent="Client"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -680.0
offset_top = -56.5
offset_right = 680.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "waiting for host to start the game..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaveLobbyButton" type="Button" parent="Client"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -144.0
offset_right = 512.0
offset_bottom = -72.0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "leave lobby"

[node name="Host" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="Host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -36.0
offset_right = 256.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "start game"

[node name="StopHostingButton" type="Button" parent="Host"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = -144.0
offset_right = 512.0
offset_bottom = -72.0
grow_vertical = 0
theme_override_font_sizes/font_size = 45
text = "stop hosting"

[connection signal="pressed" from="Client/LeaveLobbyButton" to="." method="_on_leave_lobby_button_pressed"]
[connection signal="pressed" from="Host/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Host/StopHostingButton" to="." method="_on_stop_hosting_button_pressed"]
